package src.main.JDBC.tables;

public class Vendor {
}
